--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,9 +8,12 @@ builds:
       - windows
       - darwin
 archives:
-  - 
+  -
     name_template: "{{ .ProjectName }}-{{ .Os }}-{{ .Arch }}"
     replacements:
+      darwin: darwin
+      linux: linux
+      windows: windows
       386: i386
       amd64: x86_64
 checksum:
