--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,5 +1,13 @@
 name: Go
-on: [push, pull_request]
+on:
+  pull_request:
+    branches:
+      - main
+      - release-*
+  push:
+    branches:
+      - main
+      - release-*
 
 env:
   go-cache-name: go
