--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
       - v*
 
 jobs:
-  goRelease:
+  goReleaser:
     name: UploadRelease
     runs-on: ubuntu-latest
     steps:
@@ -18,12 +18,14 @@ jobs:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
         with:
-          fetch-depth: 1
-
-      - name: Install goreleaser
-        run: go install github.com/goreleaser/goreleaser@latest
+          fetch-depth: 0
 
       - name: Run goreleaser
+        uses: goreleaser/goreleaser-action@v2
+        with:
+          # either 'goreleaser' (default) or 'goreleaser-pro'
+          distribution: goreleaser
+          version: latest
+          args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: goreleaser release
