--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,12 +2,12 @@ name: Go Benchmark Test
 
 on:
   pull_request:
+    types: [closed]
     branches:
       - main
 
 jobs:
   go-benchmark-checks:
-    if: github.event.pull_request.merged == true
     name: GoBenchmark
     runs-on: ubuntu-latest
     steps:
